# rag-project

./: .gitignore  README.md  ingestion_pipeline.py  multimodal-rag.ipynb  pyproject.toml  retrieval_pipeline.py  retrieval_with_memory.py  retrieval_with_memory_persist.py
docs/: Google.txt  Microsoft.txt  Nvidia.txt  SpaceX.txt  Tesla.txt
